# example_python_package_with_ci_testing

./: .gitignore  README.md  core.py  example.py  pyproject.toml  setup.cfg  setup.py  test_shape.py
.github/workflows/: ci.yml
example_package_for_flf/: __init__.py  _version.py  core.py
tests/: test_shape.py  test_shape_brokens.py
