[metadata]
name = does_it_fit
version = attr: does_it_fit.__version__
author = Jonathan Shimwell
author_email = jonathan.shimwell@firstlightfusion.com
description = A python package that checks if shapes positioned on the circumference of a circle overlap or not
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shimwell/example_package_for_flf
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/shimwell/example_package_for_flf
    Tracker = https://github.com/shimwell/example_package_for_flf/issues

[options]
packages = find:
python_requires= >=3.6
# install_requires=

[options.extras_require]
tests = 
    pytest >= 5.4.3
